test/spec_vectors/align/ok/module_8.wat
(module (memory 0) (func (drop (i64.load16_u align=2 (i32.const 0)))))