test/spec_vectors/align/fail/module_72.wat
(module (memory 0) (func (drop (i32.load16_u align=4 (i32.const 0)))))